# LibRate

./: .air.toml  .dockerignore  .env.example  .gitignore  .gitmodules  .golangci.yaml  .swaggo  CONTRIBUTING.md  Dockerfile  ERRORCODES.md  README.md  code_of_conduct.md  config_compose.yml  copy_config.sh  docker-compose.yml  entrypoint.sh  example_album.jsonc  example_config.yml  git.dot  go.mod  go.sum  justfile  log.txt  main.go  main_test.go  noscript.go  package.json  pnpm-lock.yaml  util.go
cfg/: config.go  default.go  load.go  load_test.go  locate.go  locate_test.go  logger.go  members.go  pg_conf.go  postgres.go  types.go  validate.go  write.go  write_test.go
cmd/: app.go  cache.go  cache_test.go  grpc.go  grpc_test.go  template.go
controllers/: media.go  member.go  random.go  recommendations.go  review.go  search.go  user.go
couchdb/: config.ini
data/: go.mod  main.go  query_builder.py
db/: Dockerfile  arango.go  core.go  core_test.go  couchdb_seed.sh  db  is_not_null.go  migration.go  migration_test.go  postgres.go  start.sh  teardown.go
example/: dgraph.json
fe/: .eslintrc.js  README.md  bun.lockb  entrypoint.sh  jest.config.cjs  package.json  pnpm-lock.yaml  rollup.config-no-minify.js  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.ts
lib/: create_type_if_ne.sql
middleware/: protected.go  protected_test.go
models/: books.go  cache.go  cdn.go  film_tv.go  lang.go  lang_test.go  langid_string.go  media.go  media_keywords.go  (+5 more)
recommendation/: Cargo.toml  build.rs
recommendation/go/: go.mod
recommendation/src/: member.rs
(+464 files in other folders)
