[package]
name = "recommendations"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-csv = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "~1.18", features = ["full"] }
